--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <!--- este es un comentario --->
-    <title>Titulo en la pestaña</title>
+    <title>John Alejandro Colorado Henao</title>
   </head>
   <body>
     <div>
-        <h1>Titulo de sección</h1>
+        <h1>Estudiante de Maestría</h1>
         <p>Este es un párrafo.</p>
     </div>
   </body>
