--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div>
         <h1>Estudiante de Maestría</h1>
-        <p>Este es un párrafo.</p>
+        <p>John Alejandro Colorado Henao.</p>
     </div>
   </body>
 </html>
